# spark-orm

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  readme.md
derive/: Cargo.toml
derive/src/: _model.rs  lib.rs  model.rs  utility.rs
derive/src/_model/: attrs.rs  constructor.rs  index.rs  inner.rs
derive/src/model/: attrs.rs  constructor.rs  index.rs  inner.rs
src/: client.rs  connection.rs  error.rs  lib.rs  macros.rs  model.rs  r_spark.rs  r_static.rs  rm_orm.rs  types.rs  utilities.rs
src/model/: base_model.rs  crud.rs  inner_crud.rs  inner_utility.rs  observer.rs  proxy_model.rs  util.rs
src/model/crud/: base_model_crud.rs  inner_crud.rs  mod.rs
src/model/model/: crud.rs
src/model/proxy_model/: crud.rs
src/model/utility/: inner_utility.rs  mod.rs
tests/: create_model.rs  generic.rs  main.rs  main_ne.rs  observer.rs
