[package]
name = "spark-orm"
authors = ["H_O_O"]
version = "0.1.0"
edition = "2021"
description = "Mongodb ORM in Rust"
keywords = ["ORM", "mongodb"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RSaprk/ORM.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
mongodb = "2.7.1"
once_cell = "1.18.0"
quote = "1.0.33"
spark-orm-derive.workspace = true
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["rt", "macros"] }


[dev-dependencies]
serde_json = "1.0.111"

[workspace]

members = [
    "derive",
]
[workspace.dependencies]
spark-orm-derive = { path = "derive", version = "0.1.0" }

