[package]
name = "spark-orm"
authors = ["H_O_O"]
version = "0.2.5"
edition = "2021"
description = "Mongodb ORM in Rust"
keywords = ["ORM", "mongodb"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/H-0-O/spark-orm.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug = []


[dependencies]
futures = "0.3.29"
mongodb = "2.7.1"
once_cell = "1.18.0"
quote = "1.0.33"
spark-orm-derive.workspace = true
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"


[dev-dependencies]
serde_json = "1.0.111"

[workspace]

members = [
    "derive",
]
[workspace.dependencies]
spark-orm-derive = { path = "derive" , version = "0.1.2"}

