[package]
authors = ["H_O_O"]
name = "rspark-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for rspark"
repository = "https://github.com/RSaprk/ORM.git"
[lib]
proc-macro = true


[dependencies]
once_cell = "1.18.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39" , features = ['full'] }