[package]
authors = ["H_O_O"]
name = "spark-orm-derive"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for spark-orm"
repository = "https://github.com/H-0-O/spark-orm.git"
[lib]
proc-macro = true


[dependencies]
darling = "0.20.3"
once_cell = "1.18.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39" , features = ['full'] }
thiserror = "1.0.56"
